crates/glyph-cli/tests/corpus/invalid/case_insensitive_constraints.glyph
skill demo()
    description: "Demo."
    Constraints:
        "bare string"
    flow:
        "Do."
